# ncurses_test_project

./: .gitignore  CMakeLists.txt  Makefile  README.md
includes/core/: core.hpp
includes/system/driver/db/: mysql_driver.hpp
includes/window/: window.hpp
sources/: main.cpp
